--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,102 @@
-.App {
+body{
+
+  /* background-color:rgb(227 76 103); */
+  /* background-image: url('../Assets/bg.png'); */
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.App {
+  text-align: center;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-self: center;
+  color: rgb(0, 0, 0);
+}
+
+.inputFile{
+  padding-top: 8%;
+  align-items: center;
+  align-self: center;
+  /* padding-left: 25%; */
+
+
+}
+
+.inputAdd{
+  margin-top: 25px;
+  /* margin-left: 25%; */
+  text-align: center;
+  padding: 5px;
+  border-radius: 10px;
+  border: 1px solid rgb(150, 150, 150);
+
+}
+
+button{
+  padding: 8px 15px;
+  border-radius: 10px;
+  border: 1px solid rgb(197, 197, 255);
+  color: aliceblue;
+  font-size: 1em;
+  font-weight:500;
+  /* background-color: rgb(25, 222, 240); */
+  background-color: rgb(222, 0, 30);
+
+  font-weight: bolder;
+
+}
+button:hover{
+  cursor: pointer;
+  background-color: rgb(252, 27, 27);
+}
+
+.mintBtn{
+  margin-left: 50px;
+  padding: 8px 40px;
+}
+
+h3{
+  /* padding-left: 25%; */
+  }
+
+.heading{
+  padding-top: 30px;
+}
+
+.connectBtn{
+  margin-top: 20%;
+  font-weight: bolder;
+  font-size: 1.4em;
+}
+
+#chooseFile{
+  background-color: rgb(177, 177, 177);
   color: white;
+  padding: 0.5rem;
+  font-family: sans-serif;
+  border-radius: 0.3rem;
+  cursor: pointer;
+  /* margin-top: 67%; */
+  padding: 25px 25px;
+  color: red;
+  display: none;
+}
+#chooseFile {
+  border-radius: 15px;
+}
+.label1{
+    
+  padding-top: 20px;
+  padding: 10px;
+  cursor: pointer;
+  border-radius: 16px;
+  background-color: rgb(252, 27, 27);
+  color: white;
+  margin-right: 60px;
 }
 
-.App-link {
-  color: #61dafb;
+.mainDiv{
+  padding-top: 50px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.connectBtn{
+  margin-top: 25%;
 }
